# wheel-changing-autonomous-sim

./: .gitignore  LICENSE  README.md
scripts/: run_old_dump_then_auto_new_grab.sh
src/wheel_changing_description/: CMakeLists.txt  package.xml
src/wheel_changing_description/launch/: view_ur10e_wheel_changer.launch.py
src/wheel_changing_description/urdf/: dual_coaxial_end_effector.xacro  ur10e_wheel_changer.urdf.xacro  wheel_changing_cell_macro.xacro
src/wheel_changing_gazebo/: CMakeLists.txt  package.xml
src/wheel_changing_gazebo/launch/: gazebo_ur10e_wheel_changer.launch.py
src/wheel_changing_gazebo/meshes/: wheel_with_center_hole.stl
src/wheel_changing_gazebo/worlds/: wheel_changing_world.sdf
src/wheel_changing_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/wheel_changing_moveit_config/config/: joint_limits.yaml  ros2_controllers.yaml  ur10e_wheel_changer.srdf  ur10e_wheel_changer.urdf
src/wheel_changing_moveit_config/launch/: debug_rsp_jsp.launch.py  demo.launch.py  demo_manual.launch.py  demo_ompl_only.launch.py  demo_ompl_only_movegroup_only.launch.py  demo_ompl_only_no_jsp.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/wheel_changing_vision_ik/: package.xml  setup.cfg  setup.py
src/wheel_changing_vision_ik/wheel_changing_vision_ik/: auto_move_to_wheel_grab.py  ik_test_current_pose.py  wheel_3d_detector.py  wheel_point_ik_probe.py
