<?xml version="1.0"?>
<package format="3">
  <name>wheel_changing_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo Sim world and launch files for the UR10e wheel-changing project.</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>wheel_changing_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
